pkginclude_HEADERS = anthy.h dicutil.h input.h
noinst_HEADERS = xstr.h xchar.h dic.h wtype.h\
 conf.h record.h alloc.h\
 ruleparser.h splitter.h \
 segment.h ordering.h \
 filemap.h \
 logger.h segclass.h \
 depgraph.h \
 texttrie.h textdict.h matrix.h \
 prediction.h word_dic.h \
 diclib.h feature_set.h \
 corpus.h convdb.h
